crates/plotnik-tests/tests/03-analyze/duplicates/duplicate_capture_flat_through_captured_node.txt
Q = (foo
  (pair
    (a) @x
  ) @p
  (b) @x
)
------------------ DIAGNOSTICS -------------------
error: capture `@x` already defined in this scope
 --> query.ptk:5:3
  |
5 |   (b) @x
  |   ^^^^^^
  |
help: rename one capture, or use labeled alternatives to preserve which alternative matched
-------------------- SYMBOLS ---------------------
Q
